--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ ipython = "^8.29.0"
 instructor = "^1.6.3"
 pytest = "^8.3.3"
 pytest-asyncio = "^0.24.0"
+pandas = "^2.2.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
