--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,6 @@ twine = "^5.0.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+bespoke-dataset-viewer = "bespokelabs.curator.viewer.__main__:main"
