--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pytest-asyncio = "^0.24.0"
 pandas = "^2.2.3"
 xxhash = "^3.5.0"
 tqdm = "^4.67.0"
+matplotlib = "^3.9.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
