enforce max line length to be 80

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 curator-viewer = "bespokelabs.curator.viewer.__main__:main"
+
+[tool.black]
+line-length = 80
