--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ tqdm = "^4.67.0"
 matplotlib = "^3.9.2"
 aiofiles = "^24.1.0"
 tiktoken = "^0.8.0"
+nest-asyncio = "^1.6.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
