--- a/bespoke-dataset-viewer/package.json
+++ b/bespoke-dataset-viewer/package.json
@@ -27,6 +27,7 @@
     "fs": "^0.0.1-security",
     "lucide-react": "^0.454.0",
     "next": "^15.0.2",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.13.3",
