--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ aiofiles = "^24.1.0"
 tiktoken = "^0.8.0"
 nest-asyncio = "^1.6.0"
 rich = "^13.7.0"
+litellm = "^1.52.11"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
