--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ tiktoken = "^0.8.0"
 nest-asyncio = "^1.6.0"
 rich = "^13.7.0"
 litellm = "^1.52.11"
+isort = "^5.13.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
@@ -47,4 +48,4 @@ build-backend = "poetry.core.masonry.api"
 curator-viewer = "bespokelabs.curator.viewer.__main__:main"
 
 [tool.black]
-line-length = 80
+line-length = 100
