--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,3 +49,6 @@ curator-viewer = "bespokelabs.curator.viewer.__main__:main"
 
 [tool.black]
 line-length = 100
+
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
