--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ litellm = "^1.52.11"
 isort = "^5.13.2"
 tiktoken = ">=0.7.0,<0.8.0"
 aiofiles = ">=22.0,<24.0"
+anthropic = "^0.40.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
