make all the examples work and add integration tests for the examples

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ anthropic = "^0.42.0"
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
 twine = "^5.0.0"
+pytest-dependency = "^0.6.0"
 
 [build-system]
 requires = ["poetry-core"]
