--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ tqdm = "^4.67.0"
 matplotlib = "^3.9.2"
 nest-asyncio = "^1.6.0"
 rich = "^13.7.0"
-litellm = "^1.52.11"
+litellm = "1.55.4"
 isort = "^5.13.2"
 tiktoken = ">=0.7.0,<0.8.0"
 aiofiles = ">=22.0,<24.0"
