--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,8 +37,9 @@ tiktoken = ">=0.7.0,<0.8.0"
 aiofiles = ">=22.0,<24.0"
 
 [tool.poetry.group.dev.dependencies]
-black = "^24.2.0"
 twine = "^5.0.0"
+ruff = "^0.8.6"
+pre-commit = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -47,8 +48,28 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.scripts]
 curator-viewer = "bespokelabs.curator.viewer.__main__:main"
 
-[tool.black]
-line-length = 100
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.lint]
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "N",  # PEP8 naming convetions
+    "D"  # pydocstyle
+]
+ignore = [
+    "C901",  # too complex
+    "W191",  # indentation contains tabs
+    "D401",  # imperative mood
+]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
 
 [tool.pytest.ini_options]
 asyncio_default_fixture_loop_scope = "function"
