--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ isort = "^5.13.2"
 tiktoken = ">=0.7.0,<0.8.0"
 aiofiles = ">=22.0,<24.0"
 vllm = "^0.6.3"
+vcrpy = "^7.0.0"
 anthropic = "^0.42.0"
 
 [tool.poetry.group.dev.dependencies]
