--- a/.github/workflows/lint-and-test.yaml
+++ b/.github/workflows/lint-and-test.yaml
@@ -23,8 +23,13 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install .
+          pip install poetry
+          poetry install
+
+      - name: Run ruff
+        run: |
+          poetry run ruff check . --output-format=github
+          poetry run ruff format . --check
 
       - name: Run integrations tests
         run: |
