--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,3 +84,9 @@ convention = "google"
 
 [tool.pytest.ini_options]
 asyncio_default_fixture_loop_scope = "function"
+
+[tool.coverage.run]
+omit = [
+    "src/bespokelabs/curator/install_ui.py",
+    "src/bespokelabs/curator/status_tracker/offline_status_tracker.py"
+    ]
