--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ ruff = "^0.8.6"
 pre-commit = "^4.0.1"
 pytest-dependency = "^0.6.0"
 pytest-timeout = "^2.3.1"
+pytest-cov = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
