--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ pytest-dependency = "^0.6.0"
 pytest-timeout = "^2.3.1"
 pytest-cov = "^6.0.0"
 psutil = "^6.1.1"
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
