--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ tiktoken = ">=0.7.0,<0.8.0"
 aiofiles = ">=22.0,<24.0"
 anthropic = "^0.42.0"
 vllm = { version = "^0.6.3", optional = true }
+aiodocker = "^0.24.0"
 
 [tool.poetry.extras]
 vllm = ["vllm"]
