--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,10 +34,12 @@ tiktoken = ">=0.7.0,<0.8.0"
 aiofiles = ">=22.0,<24.0"
 anthropic = "^0.42.0"
 vllm = { version = "^0.6.3", optional = true }
-aiodocker = "^0.24.0"
+aiodocker = { version = "^0.24.0", optional = true }
+ray = { version = "^2.41.0", optional = true }
 
 [tool.poetry.extras]
 vllm = ["vllm"]
+code_execution = ["ray", "aiodocker"]
 
 [tool.poetry.group.dev.dependencies]
 twine = "^5.0.0"
