--- a/.github/workflows/lint-and-test.yaml
+++ b/.github/workflows/lint-and-test.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install poetry
-          poetry install --with dev --extras vllm code_execution
+          poetry install --with dev --extras "vllm code_execution"
 
       - name: Run ruff
         run: |
