--- a/.github/workflows/lint-and-test.yaml
+++ b/.github/workflows/lint-and-test.yaml
@@ -26,6 +26,7 @@ jobs:
           sudo locale-gen "en_US.UTF-8"
           export LC_ALL=en_US.UTF-8
           export LANG=en_US.UTF-8
+          export TELEMETRY_ENABLED=false
 
       - name: Install dependencies
         run: |
