ref: remove push_to_hub and pin e2b version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ vertexai= "1.71.1"
 vllm = { version = "^0.6.3", optional = true }
 aiodocker = { version = "^0.24.0", optional = true }
 ray = { version = "^2.41.0", optional = true }
-e2b-code-interpreter = { version = "^1.0.3", optional = true }
+e2b-code-interpreter = { version = "1.0.3", optional = true }
 
 posthog = "^3.11.0"
 
