--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ rich = "^13.7.0"
 litellm = "1.61.3"
 tiktoken = ">=0.7.0"
 aiofiles = ">=22.0,<24.0"
-anthropic = "^0.42.0"
+anthropic = "^0.47.2"
 vertexai= "1.71.1"
 vllm = { version = "^0.6.3", optional = true }
 aiodocker = { version = "^0.24.0", optional = true }
@@ -90,6 +90,7 @@ ignore = [
 [tool.ruff.lint.per-file-ignores]
 "tests/**/*" = ["D"]  # ignore tests for now
 "**/prompt_templates.py" = ["E501"]  # ignore line-too-long for prompt template files
+"**/claude_reasoning_online.py" = ["E501", "W291"]  # ignore line-too-long and trailing whitespace for API examples
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
