--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ examples/custom/fineweb-2*
 examples/custom/*.err
 examples/custom/*.out
 examples/custom/.python-version
+examples/custom/annotated_dataset/*
+examples/custom/snowflake_classifier/*
