--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,4 @@ examples/custom/*.err
 examples/custom/*.out
 examples/custom/.python-version
 examples/custom/annotated_dataset/*
-examples/custom/snowflake_classifier/*
+examples/custom/*_classifier/
