add latest updates

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ examples/custom/*.out
 examples/custom/.python-version
 examples/custom/annotated_dataset/*
 examples/custom/*_classifier/
+examples/custom/annotated_dataset-100k
+examples/custom/arbert_classifier-100k
