--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ examples/custom/*.out
 examples/custom/.python-version
 examples/custom/annotated_dataset/*
 examples/custom/snowflake_classifier/*
+examples/custom/sync_files.sh
