--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@ examples/custom/.python-version
 examples/custom/annotated_dataset/*
 examples/custom/*_classifier/
 examples/custom/annotated_dataset-100k
-examples/custom/arbert_classifier-100k
+examples/custom/*_classifier*
